@@ -1,3 +1,7 @@
+2005-05-11 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+        * Fix for must constructor related problems with encoded scripts and php5. Also a fixes
+          memory leak in the loader. (Thanks larnot)
+
 2005-05-10 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 	
         * Added some includes to satisfy VC.NET (thanks to dakalka, patch 1198522)
